name:                sjd
version:             0.3
synopsis:            Safe Java domain generator (safe as in null-safe)
description:         Generates lots of boilerplate Java for you
homepage:            http://github.com/vpeurala/sjd#readme
license:             BSD3
license-file:        LICENSE
author:              Ville Peurala
maintainer:          ville.peurala@gmail.com
copyright:           2016 Ville Peurala
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sjd
                     , JavaBuilderGenerator
                     , JavaCommon
                     , JavaGenerator
                     , Model
                     , Parser
                     , Transform
                     , Util
  build-depends:       base >= 4.9
                     , parsec
                     , directory
                     , split
                     , mtl
  ghc-options:         -Wall
  default-language:    Haskell2010

executable sjd-gen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sjd
  default-language:    Haskell2010

test-suite sjd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sjd
                     , tasty
                     , tasty-golden
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vpeurala/sjd
